fix landing image on tablet mobile view

--- a/styles.css
+++ b/styles.css
@@ -24251,7 +24251,7 @@ input.icon-major {
 }
 @media (max-width: 1199px) {
     .hero-section__image-wrapper {
-        bottom: -25%;
+        bottom: -17%;
         right: 0;
         width: 320px;
     }
